2013-05-28  Janus Weil  <janus@gcc.gnu.org>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/57217
	* interface.c (check_dummy_characteristics): Symmetrize type check.

2013-05-27  Bud Davis  <jmdavis@link.com>

	PR fortran/50405
	* resolve.c (resolve_formal_arglist): Detect error when an argument
	has the same name as the function.

2013-05-27  Tobias Burnus  <burnus@net-b.de>

	* expr.c (gfc_build_intrinsic_call): Make symbol as attr.artificial.
	* intrinsic.c (gfc_is_intrinsic): Disable std check for those.

2013-05-22  Tobias Burnus  <burnus@net-b.de>

	* resolve.c (get_temp_from_expr): Change mangling to
	start always with a _.

2013-05-22  Tobias Burnus  <burnus@net-b.de>

	* resolve.c (get_temp_from_expr): Fix temp var mangling.

2013-05-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57364
	* resolve.c (get_temp_from_expr): Commit created sym.

2013-05-22  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57338
	* intrinsic.c (do_check): Move some checks to ...
	(do_ts29113_check): ... this new function.
	(check_specific, gfc_intrinsic_sub_interface): Call it.

2013-05-22  Janne Blomqvist  <jb@gcc.gnu.org>

	* intrinsic.texi (RANDOM_SEED): Improve example.

2013-05-21  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57035
	* intrinsic.c (do_check): Add constraint check for
	NO_ARG_CHECK, assumed rank and assumed type.
	* gfortran.texi (NO_ARG_CHECK): Minor wording change,
	allow PRESENT intrinsic.

2013-05-20  Tobias Burnus  <burnus@net-b.de>

	PR fortran/48858
	PR fortran/55465
	* decl.c (add_global_entry): Add sym_name.
	* parse.c (add_global_procedure): Ditto.
	* resolve.c (resolve_bind_c_derived_types): Handle multiple decl for
	a procedure.
	(resolve_global_procedure): Handle gsym->ns pointing to a module.
	* trans-decl.c (gfc_get_extern_function_decl): Ditto.

2013-05-20  Tobias Burnus  <burnus@net-b.de>

	PR fortran/48858
	* decl.c (add_global_entry): Use nonbinding name
	only for F2003 or if no binding label exists.
	(gfc_match_entry): Update calls.