@@ -1,3 +1,8 @@
+2013-05-28  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/57435
+	* testsuite/gfortran.dg/use_29.f90: New.
+
 2013-05-28  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/fp_exception.adb: New test.
